--- a/grid-flexbox/style/style.css
+++ b/grid-flexbox/style/style.css
@@ -17,6 +17,11 @@ h1 {
     font-size: 50px;
 }
 
+img {
+    max-width: 100%;
+    display: block;
+}
+
 .header {
     background-color: #1d1e20;
     display: flex;
@@ -41,4 +46,16 @@ h1 {
 }
 
 /* CSS FLEXBOX 1 */
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.flex > div {
+    flex: 1 1 200px;
+    margin: 10px;
+}
 
