--- a/grid-flexbox/style/style.css
+++ b/grid-flexbox/style/style.css
@@ -11,6 +11,10 @@ a {
     color: white;
 }
 
+
+body {
+    margin-bottom: 100px;
+}
 h1 {
     text-align: center;
     margin-top: 100px;
@@ -59,3 +63,42 @@ img {
     margin: 10px;
 }
 
+/* CSS GRID 1 */
+
+.grid1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 780px;
+    margin: 0 auto;
+    gap: 20px;
+}
+
+.grid1  > div:nth-child(n + 4) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+}
+
+.grid1  > div.anuncio {
+    grid-column: 1;
+    grid-row: 2 / 5;
+    /* border: 10px solid tomato; */
+    display: block;
+}
+
+@media (max-width: 600px) {
+    .grid1 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .grid1  > div:nth-child(n + 4) {
+        display: block;
+    }
+
+    .grid1  > div.anuncio {
+        grid-column: auto;
+        grid-row: auto;
+        order: -1;
+    }
+}
