--- a/grid-flexbox/style/style.css
+++ b/grid-flexbox/style/style.css
@@ -19,6 +19,7 @@ h1 {
     text-align: center;
     margin-top: 100px;
     font-size: 50px;
+    margin-bottom: 20px;
 }
 
 img {
@@ -70,6 +71,7 @@ img {
     grid-template-columns: repeat(3, 1fr);
     max-width: 780px;
     margin: 0 auto;
+    padding: 10px;
     gap: 20px;
 }
 
@@ -100,5 +102,36 @@ img {
         grid-column: auto;
         grid-row: auto;
         order: -1;
+    }
+}
+
+/* CSS Grid 2 */
+
+.grid2 {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap: 20px;
+    max-width: 800px;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.sidebar > div {
+    margin-bottom: 10px;
+}
+
+@media (max-width: 600px) {
+    .grid2 {
+        grid-template-columns: 1fr;
+    }
+
+    .sidebar {
+        display: flex;
+        overflow: scroll;
+    }
+
+    .sidebar > div {
+        flex: 1 0 200px;
+        margin: 0 10px;
     }
 }
