--- a/grid-flexbox/style/style2.css
+++ b/grid-flexbox/style/style2.css
@@ -7,7 +7,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: center;
     row-gap: 10px;
     column-gap: 30px;
@@ -19,6 +19,10 @@
   }
   
   .bloco-1 {
+    order: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
     /* indiferente: */
     background-color: #c6d8f0;
     height: 150px;
@@ -30,6 +34,10 @@
   }
   
   .bloco-2 {
+    order: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
     /* indiferente: */
     background-color: #d8bfd8;
     height: 150px;
@@ -41,6 +49,10 @@
   }
   
   .bloco-3 {
+    order: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
     /* indiferente: */
     background-color: #ff9999;
     height: 150px;
